--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-final-form": "^6.5.9",
+    "react-hook-form": "^7.52.1",
     "react-router-dom": "^6.24.0",
     "validator": "^13.12.0"
   },
